[package]
name = "spmvm-test-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
camino = "1.1.6"
home = "0.5.9"
once_cell = "1.18.0"
ff = { version = "0.13.0", features = ["derive"] }
ref-cast = "1.0.20"
rayon = "1.7"
itertools = "0.12.0" # zip_eq
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }

